Planificación temporal Sprint 27

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -144,6 +144,11 @@ En la aplicación teníamos previsto añadir una ayuda o guía para el usuario, 
  
  Respecto a la aplicación se rematará las mejoras que se realizaron durante el anterior sprint. En el modo juego usando captura target, debe ser mejorado para que al realizar una segunda captura sea posible seguir jugando correctamente. En el modo multitarget, se incluyo la posibilidad de cambiar el tamaño de un modelo, hay que añadir la posibilidad de elegir el modelo que se quiere cambiar de tamaño. 
  
+  \subsection{Sprint 27 (13/07/2020 - 15/07/2020)} 
+ Para este srpint se revisarán todos los anexos, intentando mejorar especialmente las apartados del manual del programador y del usuario.
+ 
+Por parte de la aplicación queda resolver pequeños bug. Durante la reunión mientras mostraba las últimas mejoras descubrí uno, el cual se trata de que el número máximo de targets simultáneos para el modo de MultiTarget, en ocasiones se establecía en uno por error.
+
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
