--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -140,12 +140,12 @@ En la aplicación teníamos previsto añadir una ayuda o guía para el usuario, 
  También se ha propuesto incluir un modo en el que se pueda hacer uso de la detección de múltiples marcadores simultáneos, pudiendo seleccionar y mostrar distintos modelos 3D, está propuesta puede ser viable pues en pruebas anteriores de captura target se había conseguido resultados similares, aun que sin probar a colocar modelos distintos en cada marcador.
 
  \subsection{Sprint 26 (10/07/2020 - 13/07/2020)} 
- Durante este sprint se revisaran las correcciones que los tutores han  indicado de la documentación que hay actualmente, para aplicarlas. También se procederá ha mejorar y completar mas apartados de la documentación.
+ Durante este sprint se revisaran las correcciones que los tutores han  indicado de la documentación que hay actualmente, para aplicarlas. También se procederá a mejorar y completar mas apartados de la documentación.
  
- Respecto a la aplicación se rematará las mejoras que se realizaron durante el anterior sprint. En el modo juego usando captura target, debe ser mejorado para que al realizar una segunda captura sea posible seguir jugando correctamente. En el modo multitarget, se incluyo la posibilidad de cambiar el tamaño de un modelo, hay que añadir la posibilidad de elegir el modelo que se quiere cambiar de tamaño. 
+ Respecto a la aplicación se rematarán las mejoras que se realizaron durante el anterior sprint. En el modo juego usando captura target, debe ser mejorado para que al realizar una segunda captura sea posible seguir jugando correctamente. En el modo multitarget, se incluyó la posibilidad de cambiar el tamaño de un modelo, hay que añadir la posibilidad de elegir el modelo que se quiere cambiar de tamaño. 
  
   \subsection{Sprint 27 (13/07/2020 - 15/07/2020)} 
- Para este srpint se revisarán todos los anexos, intentando mejorar especialmente las apartados del manual del programador y del usuario.
+ Para este sprint se revisarán todos los anexos, intentando mejorar especialmente las apartados del manual del programador y del usuario.
  
 Por parte de la aplicación queda resolver pequeños bug. Durante la reunión mientras mostraba las últimas mejoras descubrí uno, el cual se trata de que el número máximo de targets simultáneos para el modo de MultiTarget, en ocasiones se establecía en uno por error.
 
@@ -247,7 +247,7 @@ Los costes totales de material, son de 417,48~\euro.
 
 En el caso de las licencias del software usado, se ha aprovechado el uso gratuito. En el caso de Unity se trata de la licencia de uso personal~\footnote{\url{https://store.unity.com/es/compare-plans}}. En el caso de Vuforia, el desarrollo de aplicaciones es gratuito, pero si se tuviese la intención de publicarla con uso comercial sería necesario acogerse a una de las licencias de pago. En la tabla \ref{tabla:licenciasSoftware} se encuentran recogidas el tipo de licencias usadas.
 
-El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se tratan de algunos modelos 3D, imágenes, o Fonts que contaban con una licencia Creative Commons Atribution\footnote{\url{https://creativecommons.org/licenses/by/4.0/}} para su uso. En la tabla \ref{tabla:componentesUnity} se encunetran recogidos los distintos tipo de recursos usados en el proyectos Unity y sus licencias.
+El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se tratan de algunos modelos 3D, imágenes, o Fonts que contaban con una licencia Creative Commons Atribution\footnote{\url{https://creativecommons.org/licenses/by/4.0/}} para su uso. En la tabla \ref{tabla:componentesUnity} se encuentran recogidos los distintos tipo de recursos usados en el proyectos Unity y sus licencias.
 
 \tablaSmall{Licencias Software}{l c c }{licenciasSoftware}{\multicolumn{1}{l}{}& Versión& Licencia\\}{
 	Unity& 2019.2.19f1& Unity Personal\\
@@ -256,7 +256,7 @@ El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se trat
 	Gimp& 2.10& GNU\\
 	}
 
-\tablaSmall{Componentes usados en Unity}{l c c }{componentesUnity}{\multicolumn{1}{l}{}& Versión& Licencia\\}{
+\tablaSmall{Componentes usados en Unity}{l c c }{componentesUnity}{\multicolumn{1}{l}{Componentes}& Versión& Licencia\\}{
 	Plants~\cite{unityAssetPlant}\footnote{\url{https://assetstore.unity.com/packages/3d/vegetation/plants/plants-150261}}& 1.0 & Extension Asset\\
 	Cartoon Farm Crops~\cite{unityFarm}\footnote{\url{https://assetstore.unity.com/packages/3d/vegetation/plants/cartoon-farm-crops-79777}}	& 1.0& Extension Asset\\
 	Garden Realistic Tools~\cite{unityGarden}\footnote{\url{https://assetstore.unity.com/packages/3d/garden-realistic-tools-68960}}
@@ -271,3 +271,5 @@ El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se trat
 	RacingSansOne-Regular~\cite{fontRacingSans}& &Free For
 	Commercial Use\\
 	}
+
+Para el software que se ha desarrollado, se ha decidido que tenga una licencia ... 
