--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -6,9 +6,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 \begin{itemize}
 	\item Un objetivo es el de estudiar el estado del arte en este tipo de aplicaciones de realidad aumentada. 
 	\item Realizar una aplicación para el ámbito educativo, empleando una de las aplicaciones AR estudiadas.
-	\item Utilizar MergeCube para el diseño e implementación de la aplicación.
-	\item Como ejercicio se ha diseñado el crecimiento de una planta, en el que se representaría las principales fases del crecimiento. Sería para usar en clases de biología de primaria/secundaria.
-	\item Que pueda usarse en el mayor número de dispositivos compatible posibles.
+	\item Utilizar MergeCube para el diseño e implementación de la aplicación. Como ejercicio se ha diseñado el crecimiento de una planta, en el que se representaría las principales fases del crecimiento. Sería para usar en clases de biología de primaria/secundaria. Y que está aplicación pueda usarse en el mayor número de dispositivos (Android) compatible posibles.
 \end{itemize}
 \section{Catálogo de requisitos}
 \subsection{Requisitos Funcionales}
