--- a/Documentación/bibliografiaAnexos.bib
+++ b/Documentación/bibliografiaAnexos.bib
@@ -88,3 +88,10 @@
 	howpublished ="\url{https://www.1001fonts.com/racing-sans-one-font.html}",
 	note = "[Internet; descargado 08-mayo-2020 ]"
 }
+@misc{iconoDisparador,
+	author = "flaticon",
+	title = "Escaneo De Código Qr icono ",
+	howpublished = "\url{https://www.flaticon.es/icono-gratis/escaneo-de-codigo-qr_3064522?term=qr&page=1&position=6}",
+	note = "[Internet; descargado 15-Julio-2020 ]"
+}
+
