--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -266,10 +266,12 @@ El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se trat
 	Icono Fertilizante~\cite{iconoFertilizante}\footnote{\url{https://www.flaticon.es/icono-gratis/fertilizante_1465973?term=fertilizante&page=1&position=45}}&&Licencia de Flaticon
 	\\
 	Icono Gotas de lluvia~\cite{iconoGotasLluvia} &1 & Free for commercial use \\
+	Icono Escaneo Qr~\cite{iconoDisparador} &1 & Licencia de Flaticon \\
 	Dinomouse-Regular~\cite{fontDinomouse}& &Free For
 	Commercial Use\\
 	RacingSansOne-Regular~\cite{fontRacingSans}& &Free For
 	Commercial Use\\
 	}
 
-Para el software que se ha desarrollado, se ha decidido que tenga una licencia ... 
+Para este proyecto, se ha decidido usar una licencia Apache 2.0 pues es una de las que tiene realizacion con las licencias de 
+https://support.ptc.com/help/flexplm/r11.1_m010/en/index.html#page/FlexPLM_Help_Center/common/copyright/SW_AboutBox.html
