--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -213,3 +213,12 @@
 	url = "https://nianticlabs.com/es/blog/building-experiences-from-the-ground-up/",
 	note = "[Internet; descargado 22-junio-2020]"
 }
+
+@misc{ diagramsNet,
+	author = "diagrams.ne",
+	title = "Open source diagramming is moving to diagrams.net, slowly",
+	year = "2020",
+	url = "https://www.diagrams.net/blog/move-diagrams-net",
+	note = "[Internet; descargado 17-Julio-2020]"
+}
+
