--- a/Documentación/memoria.tex
+++ b/Documentación/memoria.tex
@@ -437,12 +437,18 @@ D. Álvar Arnaiz González
 % Abstract en castellano
 \renewcommand*\abstractname{Resumen}
 \begin{abstract}
-En este proyecto se va ha realizar un estudio de diferentes herramientas de realidad aumentada actuales. Se compararan ...
+La realidad aumentada se trata de las técnicas que combinan elementos virtuales con el mundo real.
+
+En este proyecto se va ha realizar un estudio de diferentes herramientas de realidad aumentada actuales. Se compararán sus distintas funcionalidades, sus pros y contra. Escogiendo cuales de las herramientas estudiadas son las que mas destacan frente al resto. Ademas el estudio se enfocará en como estas herramientas de realidad aumentada pueden usarse para la docencia.
+
+La finalidad del proyecto es entender que es la realidad aumentada, cuales son sus ventajas...
 
 Para completar se realizará una aplicación orientada a la docencia, con una de las herramientas estudiadas previamente, en la que poner a prueba sus características. La idea de la aplicación es fomentar nuevas formas de aprendizaje mediante el uso de la realidad aumentada, el primer ejemplo desarrollado trata de ver el proceso de crecimiento de una planta.
 
-El apk de la aplicación esta disponible  en el repositorio.	
-enlace
+El apk de la aplicación esta disponible  en el repositorio y en DropBox .	
+
+ENLACES:
+
 \end{abstract}
 
 \renewcommand*\abstractname{Descriptores}
