--- a/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -2,11 +2,18 @@
 
 
 \section{Conclusiones}
+-Se han cumplido los objetivos.
+-Gracias a Unity, ha sido posible crear una aplicación funcional sin mucha dificultad.
+Aunque por otro lado, aunque si contaba con experiencia con Unity, no era mucha, por lo que algunos aspectos que realmente uno podria no llevar mucho tiempo, al final consumen mas tiempo del esperado.
+-También respecto a Unity, debido a una falsta de experiencia ..... , a la hora de programar hay cosas que no se muy bien como ordenarlas
 
 \section{Lineas de trabajo futuras}
+Durante el desarrollo, he observado puntos que podrían haber completado el desarrollo del proyecto.
+
 Uno de los aspectos que mas relevantes de la realidad aumentada hoy en día es la tendencia ha dejar de lado los marcadores físicos y centrarse en el reconocimiento sin marcadores.
 Por ello una de los aspectos en los que se podría mejorar la aplicación es implementado este tipo de realidad aumentada, de una forma mas precisa y con mayor papel en el uso de la app.
 
+Otra de las lineas futuras, sería llevar la aplicación a otras plataformas. Por ejemplo sería posible llevar una aplicación windows, que pueda funcionar con una webcam.
 
 Todo proyecto debe incluir las conclusiones que se derivan de su desarrollo. Éstas pueden ser de diferente índole, dependiendo de la tipología del proyecto, pero normalmente van a estar presentes un conjunto de conclusiones relacionadas con los resultados del proyecto y un conjunto de conclusiones técnicas. 
 Además, resulta muy útil realizar un informe crítico indicando cómo se puede mejorar el proyecto, o cómo se puede continuar trabajando en la línea del proyecto realizado. 
