--- a/Documentación/tex/6_Trabajos_relacionados.tex
+++ b/Documentación/tex/6_Trabajos_relacionados.tex
@@ -23,4 +23,9 @@ la capacidad de reconocer objetos del entorno para crear mejores sensaciones de 
 
 
 
-\subsection{-}
+\subsection{3D-Viewer-v2}
+
+Se trata de un proyecto de fin de grado con el objetivo de crear un Visor 3D para arqueología, dirigido para la docencia del Grado en Historia y Patrimonio de la universidad de Burgos.
+La aplicación en este proyecto, perimte a alumnos y profesores visualizar modelos 3D óseos, también tiene la posibilidad de añadir anotaciones y medidas. Este proyecto es interesante pues, es un claro ejemplo que los modelos 3D se pueden llevar para la mejora de la docencia. En este caso, está aplicación podría ser mejorada incluyéndola un funcionamiento con realidad aumentada.
+
+Si se cuenta con un modo de realidad aumentada, los usuarios también podrán observar por ejemplo como serían las proporciones reales proyectadas.
